--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 ruby "2.2.2"
 
-gem 'rails', '5.0.0.beta4'
+gem 'rails', '5.0.0'
 gem 'sqlite3'
 gem 'rspec-rails'
 gem 'pry'
